@@ -1,3 +1,7 @@
+2011-09-29  Valek Filippov
+
+		* FH: XForm parsing based on flags
+
 2011-09-27  Valek Filippov
 
 		* FH: More records parsing, rewrite Xform as two parts record.
